// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecs - referrer - full: 00abcd8b-a685-44ab-a5ef-b43ce489d6cd 1`] = `
Object {
  "http": Object {
    "request": Object {
      "referrer": Object {
        "domain": "somewhere.com",
        "file": Object {
          "directory": "/with/some",
          "ext": "ext",
          "name": "path.ext",
        },
        "fragment": "fragment",
        "full": "http://somewhere.com:8080/with/some/path.ext?this=that#fragment",
        "original": "http://username:password@somewhere.com:8080/with/some/path.ext?this=that#fragment",
        "password": "-",
        "path": "/with/some/path.ext",
        "port": "8080",
        "query": "this=that",
        "query_k": Array [
          "this",
        ],
        "query_kv": Array [
          "this=that",
        ],
        "query_v": Array [
          "that",
        ],
        "scheme": "http",
        "uri": "//somewhere.com/with/some/path.ext",
        "username": "username",
      },
    },
  },
}
`;

exports[`ecs - referrer - no path: fe3a90a4-1319-44e0-af0f-312686d81ae7 1`] = `
Object {
  "http": Object {
    "request": Object {
      "referrer": Object {
        "domain": "somewhere.com",
        "file": Object {
          "directory": "/",
        },
        "full": "http://somewhere.com/",
        "original": "http://somewhere.com",
        "path": "/",
        "port": "80",
        "scheme": "http",
        "uri": "//somewhere.com/",
      },
    },
  },
}
`;

exports[`ecs - referrer - path with just /: 84023bc4-77fe-439f-9123-91c20362c04a 1`] = `
Object {
  "http": Object {
    "request": Object {
      "referrer": Object {
        "domain": "somewhere.com",
        "file": Object {
          "directory": "/",
        },
        "full": "http://somewhere.com/",
        "original": "http://somewhere.com/",
        "path": "/",
        "port": "80",
        "scheme": "http",
        "uri": "//somewhere.com/",
      },
    },
  },
}
`;
